--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   ],
   "private": true,
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest ./src"
   },
   "dependencies": {
     "@ilovepdf/ilovepdf-core": "file:../ilovepdf-core"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.9",
+    "babel-jest": "^26.2.2",
+    "dotenv": "^8.2.0",
+    "jest": "^26.2.2",
     "typescript": "^3.8.3"
   }
 }
