Added public key env var

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,3 +41,5 @@ jobs:
       working-directory: ./ilovepdf-js
     - run: npm test
       working-directory: ./ilovepdf-js
+      env:
+        PUBLIC_KEY: ${{ secrets.PUBLIC_KEY }}
