--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "test": "jest ./src"
+    "test": "jest ./src",
+    "sample": "bash -c \"env SAMPLE=$0 webpack\""
   },
   "dependencies": {
     "@ilovepdf/ilovepdf-core": "file:../ilovepdf-core"
@@ -19,9 +20,13 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.9",
     "babel-jest": "^26.2.2",
+    "copy-webpack-plugin": "^5.1.1",
     "dotenv": "^8.2.0",
     "jest": "^26.2.2",
-    "typescript": "^3.8.3"
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "jest": {
     "testTimeout": 10000
