--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "declaration": true
-  }
+  },
+  "exclude": [ "dist", "build", "**/*/*.test.ts" ]
 }
