--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sample": "bash -c \"env SAMPLE=$0 webpack\""
   },
   "dependencies": {
-    "@ilovepdf/ilovepdf-core": "file:../ilovepdf-core"
+    "@ilovepdf/ilovepdf-core": "file:../ilovepdf-core/dist"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
