fix: error using ILovePDFFile due to ES5 transpilation and prototype chain corruption

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "target": "es5",
+    "target": "ES6",
     "lib": [
       "esnext",
       "dom"
